syntax = "proto3";
package common.errcode;

option java_multiple_files = false;
option java_package = "com.cmcc.littlec.proto.common";
option java_outer_classname = "ErrorCode";

// 0~500 基础错误码
// 501~600 user
// 601-800 connector
// 1001~1200 chat
// 1201~1400 push
// 1401~2000 group
// 2001~2200 hms
// 2201~2400 route
// 2401~2600 serial
// 2601~2800 sms
// 2801~3000 email
// 3001~3200 front
// 3201~3400 monitor
// 3401~3600 friend
// 3601~3800 agent
// 3801~4000 chatroom
// 4001~4200 robot
// 4201～4400 adapter
// 4401～4600 fleet
enum EErrorCode
{
    UNKNOWN_EERRORCODE = 0;
	OK = 200;								// 操作成功
	DATABASE_ERROR = 1;      				// server端数据库异常
	SESSION_TIMEOUTED = 2;   				// token过期
	USER_NOT_EXISTED_OR_PWD_ERROR = 3;  	// 由于不想让用户知道是密码错误还是用户名不存在，所以一律返回该错误码
	ERROR_SYSTEM = 4;        				// 系统错误，server端异常，一些没有其他ErrorCode的server异常，都可用该code
	FAILED_ACCESS_RESOURCE = 5;  			// 资源访问失败
	PERMISSION_DENIED = 6;    				// 该操作用户没有权限
	INVALID_PARAM = 7;        				// 请求包含错误参数
    PROTO_PARSE_ERROR = 8;                  // PB解析出错
	USER_LOGINED_OTHERDEVICE = 20; 			// 账户在其他地方登陆了
	USER_TEMPPROHIBIT = 21; 				// 系统临时禁止登陆,如IP过于频繁
	APPKEY_OR_APPKEYPWD_ERROR = 23;     	// appkey或者appkeyPassword不存在
	SERVER_INNER_ERROR = 500;           	// 服务器内部错误

	USER_NOT_EXISTED = 501;             	//　用户不存在
	USER_HAS_REGISTERED = 502;          	//　用户已注册
	USER_PHONE_INVALID = 503;           	//　手机号码不合法
	USER_CURRENT_SILENT = 504;           	//　已经是静默状态
	USER_CURRENT_NOT_SILENT = 505;          //　已经是非静默状态
	PHONE_HAS_REGISTERED = 506;             // 号码已经被注册
	PARAM_ERROR_PASSWORD_EMPTY = 507;       // 入参密码为空
	USER_CREATE_ERROR = 511;                // 用户创建失败
	USER_DELETE_ERROR = 512;                // 用户删除失败
	USER_UPDATE_ERROR = 513;                // 用户更新失败
	USER_QUERY_ERROR = 514;                 // 用户查询失败
	USER_DEVICEID_NOT_MATCH_THE_LAST = 515; // 用户更换设备，自动登录失败
	USER_LOGIN_TOKEN_INVALID = 516; // 用户登录token校验失败

	USER_NOT_LOGIN = 601;					// 用户未登陆
    USER_CONFLICT_LOGIN = 602;          	// 其他用户登陆，被踢
    SESSION_STATUS_ERROR = 603;            	// session连接异常
    CONNECTOR_USER_ALREADY_LOGIN = 604;     // 用户已登陆(同一Stream流)
    CONNECTOR_LOGIN_MODE_MUST_FILL = 605;   // 登录模式必填

	CHAT_SENDER_IS_FORBIDDEN = 1001;		// 发送方被禁言
	CHAT_RECEIVER_NOT_EXIST = 1002;			// 接收方不存在
	CHAT_INVALID_MESSAGE = 1003;			// 消息内容不正确，比如发送图片，但内容却为空
	CHAT_MESSAGE_SAVE_FAILED = 1004;		// 消息存储失败
	CHAT_FROM_IS_EMPTY = 1005;				// 发送方是空
	CHAT_EXCEED_MULTI_RECEIVER_LIMIT = 1006;// 群发接收者超出人数限制
	CHAT_SOME_RECEIVER_NOT_EXIST = 1007;	// 群发部分接收者不存在
	CHAT_SKIP_FILTER = 1008;				// 跳过不良信息
	CHAT_FILTER_NO_MESSAGE = 1009;			// chat没有对应的过滤消息
	CHAT_SENDER_IS_SHIELDED = 1010;       // 发送方被屏蔽

	PUSH_UID_NULL_ERROR = 1201;           	// 用户ID空
	PUSH_CREATE_CRTIFICATE_FAILED = 1202; 	//创建证书失败
	PUSH_DELETE_CRTIFICATE_FAILED = 1203;   //删除证书失败
	PUSH_CLEAR_TOKEN_FAILED = 1204;         //清除token
	PUSH_SET_TOKEN_FAILED = 1205;           //设置token
	PUSH_QUERY_CRT_TYPE_FAILED = 1206;      //查询crt type
	PUSH_SET_BADGE_FAILED = 1207;           //设置badge失败
	PUSH_BUNDLEID_EMPYT = 1208;             //bundleid为空
    PUSH_USER_NOT_ONLINE = 1209;            //用户不在线
    PUSH_CUSTOM_MSG_FAIL = 1210;            //推送自定义消息失败
    PUSH_CUSTOM_MSG_CARBON_FAIL = 1211;     //推送自定义消息到伙伴终端失败
    PUSH_CUSTOM_MSG_SAVE_FIAL = 1212;       //保存自定义消息失败

	GROUP_EXCEED_CREW_COUNT_LIMIT = 1401;	// 超出群人数限制
	GROUP_OWNER_MUST_NOT_BE_EMPTY = 1402;	// 群主不能为空
	GROUP_NAME_EXCEED_LIMIT = 1403;			// 群名称超过长度限制
    GROUP_NOT_EXIST = 1404;                 // 群不存在或已失效
    GROUP_INVITEE_ALREADY_IN = 1405;        // 受邀者已在群中
    GROUP_INVITATIN_UNAVAILABLE = 1406;     // 邀请无效或已过期
    GROUP_REQUESTER_NOT_IN_GROUP = 1407;	// 请求者不在群中
    GROUP_EMPTY_MEMBER_AND_INVITEE = 1408;  // 成员及受邀请者列表为空
    GROUP_REQUESTER_IS_NOT_OWNER = 1409;	// 请求者不是群主
    GROUP_REQUESTER_ALREADY_IN = 1410;      // 请求者已在群中
    GROUP_CREW_NICK_EXCEED_LIMIT = 1411;	// 群成员昵称超过长度限制
    GROUP_REASON_LENGTH_LIMIT = 1412;       // 请求原因超出长度限制
    GROUP_JOIN_GROUP_HAS_BEEN_PROCESSED = 1413; // 入群申请已经被处理
    GROUP_NEVER_JOIN_GROUP = 1414;          // 被处理入群申请者从未申请入群
    GROUP_REQUESTER_IS_NOT_OWNER_OR_ADMIN = 1415;  // 请求者非群主或群管理员
    GROUP_NEW_OWNER_NOT_IN_GROUP = 1416;	// 转移群主：被转移者不在群中
    GROUP_ADMINS_INVALID = 1417;            // 指定的管理员无效（不在群中或已经是管理员)
    GROUP_PARAM_ERROR = 1418;               // 请求参数出错
    GROUP_EMPTY_BEKICKED_LIST = 1419;       // 被踢者列表为空
    GROUP_MEMBER_DO_KICK_FORBIDDEN = 1420;  //群成员角色禁止踢人
    GROUP_SELF_KICK_FORBIDDEN = 1421;       // 禁止踢自己出群
    GROUP_ADMIN_KICK_NONMEMBER_FORBIDDEN = 1422;  //　管理员禁止踢非普通成员出群
    GROUP_CHANGE_NICK_LIST_EMPTY = 1423;    //修改昵称列表为空
    GROUP_CHANGE_NICK_HASERROR = 1424;      //修改成员昵称出错
    GROUP_NO_VALID_MEMBER_TO_BE_KICKED = 1425; //没有可踢的成员
    GROUP_SETMANAGER_HASERROR = 1426;       //设置群管理员包含错误
    GROUP_UNSETMANAGER_HASERROR = 1427;       //取消设置群管理员包含错误
    GROUP_ADDMAMBER_HASERROR = 1428;       //添加群成员包含错误
    GROUP_DELMAMBER_HASERROR = 1429;       //删除群成员包含错误
    GROUP_INVITATION_OVERDUE = 1430;       // 群邀请已超时
	GROUP_DESC_EXCEED_LIMIT = 1431;			// 群描述超过长度限制
	GROUP_SOME_USER_NOT_REGISTERD = 1432;	// 部分用户未注册
	GROUP_OWNER_CAN_NOT_EXIT = 1433;		// 群主不允许退群
    GROUP_BEKICKED_NO_IN_GROUP = 1434;      // 被踢者不在群中
    GROUP_CREATE_MEMBER_REPEATED = 1435;    //创建群时有重复用户
    GROUP_SETADMIN_MEMBER_REPEATED = 1436;    //设置管理员时有重复用户
    GROUP_UNSETADMIN_MEMBER_REPEATED = 1437;    //取消管理员时有重复用户
    GROUP_NEW_OWNER_ALREADY_OWNER = 1438;	// 转移群主：被转移人已经是群主
    GROUP_MEMBER_NOT_IN = 1439;          //用户不在群中
    GROUP_TAG_NOT_EXIST = 1440;                 // 群标签不存在或已失效
    GROUP_TAG_NAME_EXCEED_LIMIT = 1441;         // 群标签名称超过长度限制
    GROUP_TAG_DESC_EXCEED_LIMIT = 1442;         // 群标签描述超过长度限制
    GROUP_NOT_EXIST_OR_CREW_EMPTY = 1443;         // 推送的群不存在或者群成员为空
    GROUP_MUST_SET_ASSEMBLY_POINT = 1444;   // 必须设置集结点
    GROUP_FILTER_NO_MESSAGE = 1445;         // group没有对应的过滤消息

    JIMAO_SOME_USERS_NOT_EXISTS = 1601;    // 一些用户不存在
    JIMAO_WRONG_MSGTYPE_ERROR = 1607;   // 错误的鸡毛信类型
    JIMAO_PARSE_MSGDATA_ERROR = 1608;   // 解析鸡毛信消息错误
    JIMAO_ADD_THREAD_ERROR = 1609;  // 添加定时任务错误
    JIMAO_STORE_READEDSIGNAL_ERROR = 1610;  // 保存已读鸡毛信信令到hms失败
    JIMAO_AUDIO_NOT_EXIST = 1611;     // 无法取到音频鸡毛信的url
    JIMAO_AUDIO_INNER_ERROR = 1622;      // 音频鸡毛信内部错误
    JIMAO_MSG_HAD_SENDED = 1633;      // 鸡毛信已发过短信
    JIMAO_REDIS_ERROR = 1634;     // 鸡毛信redis操作错误

    HMS_MESSAGE_STORE_ERROR = 2001;			//消息存储失败
    HMS_ERROR_PARSING_PROTOCLASS = 2002;	//参数解析异常
    HMS_NO_MESSAGE_FOUND = 2003;			//没有满足查询条件的消息
    HMS_PARAM_FORMAT_ERROR = 2004;          //参数格式错误
    HMS_UNKOWN_QUERY_ERROR = 2005;          //查询时出现未知错误
    HMS_GUID_INVALID_ERROR = 2006;          //查询guid不合法
    HMS_INNER_ERROR = 2007;       // 内部错误
    HMS_ERROR_UPDATE_USER_GUID = 2008;
    HMS_ERROR_QUERY_GROUP_LIST = 2009; //查询用户群列表错误
    HMS_USER_GROUP_LIST_EMPTY = 2010;
    HMS_SESSION_NOT_EXIST = 2011; //会话不存在
    HMS_ERROR_RETRACT_MESSAGE = 2012; //撤回消息失败
    HMS_MESSAGE_NO_ALL_REMOVED = 2013; //删除消息错误
    HMS_USER_HAS_NO_SEND_MESSAGE = 2014; //用户没有发送消息
    HMS_DATABASE_ERROR = 2015;//数据库异常
    HMS_TEMPORARY_MESSAGE_RETRACT = 2016; //临时消息已经撤回
    /* HMS_MSG_RETRACT_FAILED = 2008; */

    MSGGW_MESSAGE_UPLOAD_FAILED = 2201;      //消息网关消息保存失败
    MSGGW_MESSAGE_SEND_FAILD = 2202;      //消息网关消息解析失败
    MSGGW_SOME_USER_NOT_EXSIT = 2203; //有些用户不存在

	SERIAL_ZK_NODE_NOT_FOUND = 2401;  		//根据IP:PID未查询到zookeeper中的node
	SERIAL_SEQ_NOT_EXIST = 2402;           //查询seq不存在
	SERIAL_WOKERID_NOT_EXIST = 2403;       //查询workerid不存在
	SERIAL_ID_DELETE_FAILED = 2404;        //删除序号失败
	SERIAL_ID_GENERATE_FAILED = 2405;      //生成serialId失败
	SERIAL_SERVER_INNER_ERROR = 2406; //serial 模块内部错误

	SMS_SEND_FAILED = 2601;                //短信发送失败
	SMS_RECEIVER_PHONE_EMPTY = 2602;       //接收者号码空

	EMAIL_SEND_FAILED = 2801;              //邮件发送失败
	EMAIL_RECEIVER_ADDRESS_EMPTY = 2802;   //接收地址空

	FRONT_APPKEY_NOT_FOUND = 3001; //appkey 不存在
	FRONT_APPKEY_ALREADY_EXISTS = 3002; //新增appkey已存在
	APPKEY_NOT_EXISTS = 3003; //console中appkey不存在

	SECURITY_KEY_NOT_MATCH = 3004; //securityKey 错误
    INVALID_USERNAME = 3005; //用户名不合法
    INVALID_PASSWORD = 3006; //密码不合法
    INVALID_PHONE = 3007; //手机号不合法
    INVALID_NICK = 3008; //昵称不合法
    INVALID_GROUPNAME = 3009; //群名称不合法
    INVALID_APPKEY = 3010; //appkey 格式不合法
    INVALID_CONTENT_TYPE = 3011; // content-type 不合法
    KEYWORD_SHOULD_NOT_EMPTY = 3012; //搜索关键词不合法
    TOO_MANY_GROUP_OWNER = 3013; //群主不能超过一个
    INVALID_GWMESSAGEID = 3014;//消息网关id不合法
    REQUEST_LIST_EXCEED_LIMIT = 3015; //请求列表过长
    FRONT_NO_SUCH_ENVIRONMENT = 3016; //没有对应的环境
    FRONT_SERVER_INNER_ERROR = 3017; //front模块内部错误
    INVALID_JSON = 3018; //json 不合法


    MONITOR_ALREADY_OPNE = 3201; //监控已打开
	MONITOR_ALREADY_CLOSED = 3202; //监控已关闭
	MONITOR_FILE_UPLOAD_ERROR = 3203; //文件上传错误
	MONITOR_CLOSE_FAILE = 3204; //关闭监控失败
	MONITOR_OPEN_FAILE = 3205; //开启监控失败
	MONITOR_SERVER_INEER_ERROR = 3206;// monitor模块内部错误

	FRIEND_QUERY_FROM_NICK_FAILED = 3401;		// 用户中心查询好友请求者昵称失败
	FRIEND_PARAMETER_EMPTY_ERROR = 3402;		//好友参数为空
	FRIEND_REQUEST_NOT_EXIST = 3403;			// 好友请求不存在
	FRIEND_REQUEST_HAS_BEEN_PROCESSED = 3404;	// 好友请求已被处理
	FRIEND_REQUEST_RECEIVER_NOT_MATCH = 3405;	// 同意/拒绝好友请求发起者与好友请求的接收者不匹配
	FRIEND_APPKEY_NOT_MATCH = 3406;				// appkey不匹配
	FRIEND_APPLY_SELF_ERROR = 3407;				// 添加自己为好友
	FRIEND_UPDATE_SELF_ERROR = 3408;			// 更新自己备注信息
	FRIEND_IS_FRIEND_ALREADY = 3409;            // 已经是好友
	FRIEND_IS_NOT_FRIEND = 3410;                // 不是好友
    FRIEND_REQUEST_HAS_BEEN_ACCEPT = 3411; //已接受好友请求
    FRIEND_REQUEST_HAS_BEEN_REJECT = 3412; //已拒绝好友请求
    FRIEND_REQUEST_HAS_BEEN_ACCEPT_ERROR_REJECT = 3413; //已接受好友请求，错误拒绝处理
    FRIEND_REQUEST_HAS_BEEN_REJECT_ERROR_ACCEPT = 3414; //已拒绝好友请求，错误的接受处理
    FRIEND_REQUEST_HAS_EXPIRED = 3415;          //好友请求已失效
    FRIEND_HAS_DELETE_APPLY = 3416;             //好友主动删除后再次添加,服务器内部使用
    FRIEND_TWO_WAY_APLLY_REQUEST = 3417;         //好友双向请求,服务器内部使用
    FRIEND_OWNER_COUNT_OVER_LIMIT = 3418;         //好友添加失败 己方好友数量已超过上限
    FRIEND_TO_COUNT_OVER_LIMIT = 3419;         //好友添加失败 对方好友数量已超过上限

    AGENT_USERCREATE_HASERROR = 3601; //创建用户包含错误
    AGENT_USERDELETE_HASERROR = 3602; //删除用户包含错误
    AGENT_USERMODIFY_HASERROR = 3603; //修改用户包含错误
    AGENT_USERQUERY_HASERROR = 3604; //查询用户包含错误
    AGENT_USERSEARCH_HASERROR = 3605; //搜索用户包含错误
    AGENT_CREATEGROUP_ERROR = 3606; //创建群失败
    AGENT_GROUP_NOT_EXIST = 3607;   //群不存在
    AGENT_PARAM_FORMAT_ERROR = 3608; //参数错误
    AGENT_INNER_ERROR = 3609; //内部错误
    AGENT_GROUP_JOIN_IN_REASON_LIMIT = 3610; //申请入群理由过长
    AGENT_GROUP_ALREADY_IN = 3611; //申请人已在群中
    AGENT_GROUP_USER_NOT_IN = 3612; //用户不在群中
    AGENT_GROUP_DEL_MEMBER_HASERROR = 3613; //删除群成员包含错误
    AGENT_GROUP_CHANGENICK_HASERROR = 3614; //修改成员昵称包含错误
    AGENT_GROUP_ADDMEMBER_HASERROR = 3615; //添加群成员包含错误
    AGENT_GROUP_SETMANAGER_HASERROR = 3616; //设置管理员包含错误
    AGENT_GROUP_UNSETMANAGER_HASERROR = 3617; //设置管理员包含错误
    AGENT_GROUP_NAME_LENGTH_LIMIT = 3618; //群名称过长

    CHATROOM_PARAMETER_EMPTY = 3801; //查询参数为空
    CHATROOM_ALREADY_FULL = 3802; // 聊天室已经满了，无法再加人
    CHATROOM_USER_NO_PRIVILEGES = 3803; //用户没有操作权限，用户可能非管理员
    CHATROOM_ALREADY_CLOSE = 3804; //聊天室已经关闭
    CHATROOM_NOT_EXIST = 3805; //聊天室不存在
    CHATROOM_ALREADY_EXIST = 3806; //聊天室已经存在
    CHATROOM_ID_EMPTY = 3807;//聊天室ID未设置
    CHATROOM_USER_NAME_EMPTY = 3808; //用戶名空
    CHATROOM_ROOM_NAME_EMPTY = 3809; //房间名字空
    CHATROOM_APPKEY_EMPTY = 3810; //appkey空
    CHATROOM_USER_NOT_IN_ROOM = 3811; //用户不在聊天室里
    CHATROOM_OWNER_CAN_NOT_EXIT = 3812; //创建者不能退出聊天室
    CHATROOM_INVITER_NOT_IN_ROOM = 3813; //邀请者不在聊天室中
    CHATROOM_SENDER_NOT_IN_ROOM = 3814; //消息发送者不在聊天室中
    CHATROOM_ALREADY_OPEN = 3815; //聊天室已经打开

    ROBOT_CONTENT_EMPTY = 4001;	// 请求内容为空
    ROBOT_CORE_REFUSED = 4002;	// 服务拒绝
    ROBOT_CONTENT_FORMAT_ERROR = 4003;	// 请求内容格式错误

    ADAPTER_INVALID_JSON = 4201; //json格式不合法
    ADAPTER_APPKEY_NOT_FOUND = 4202; //appkey不存在
    ADAPTER_APPKEY_ALREADY_EXIST = 4203; //appkey已存在
    ADAPTER_APPKEYENV_NOT_FOUND = 4204; //appkey 环境未配置
    ADAPTER_FRONTENV_NOT_FOUND = 4205; //front环境未配置

    FLEET_EXCEED_CREW_COUNT_LIMIT = 4401;   // 超出车队人数限制
    FLEET_OWNER_MUST_NOT_BE_EMPTY = 4402;   // 车队主不能为空
    FLEET_NAME_EXCEED_LIMIT = 4403;         // 车队名称超过长度限制
    FLEET_NOT_EXIST = 4404;                 // 车队不存在或已失效
    FLEET_INVITEE_ALREADY_IN = 4405;        // 受邀者已在车队中
    FLEET_INVITATIN_UNAVAILABLE = 4406;     // 邀请无效或已过期
    FLEET_REQUESTER_NOT_IN_FLEET = 4407;    // 请求者不在车队中
    FLEET_EMPTY_MEMBER_AND_INVITEE = 4408;  // 成员及受邀请者列表为空
    FLEET_REQUESTER_IS_NOT_OWNER = 4409;    // 请求者不是车队主
    FLEET_REQUESTER_ALREADY_IN = 4410;      // 请求者已在车队中
    FLEET_CREW_NICK_EXCEED_LIMIT = 4411;    // 车队成员昵称超过长度限制
    FLEET_REASON_LENGTH_LIMIT = 4412;       // 请求原因超出长度限制
    FLEET_JOIN_FLEET_HAS_BEEN_PROCESSED = 4413; // 入车队申请已经被处理
    FLEET_NEVER_JOIN_FLEET = 4414;          // 被处理入车队申请者从未申请入车队
    FLEET_NOT_EXIST_OR_CREW_EMPTY = 4415;         // 推送的车队不存在或者车队成员为空
    FLEET_NEW_OWNER_NOT_IN_FLEET = 4416;    // 转移车队主：被转移者不在车队中
    FLEET_MEMBER_NOT_IN = 4417;          //用户不在车队中
    FLEET_PARAM_ERROR = 4418;               // 请求参数出错
    FLEET_EMPTY_BEKICKED_LIST = 4419;       // 被踢者列表为空
    FLEET_MEMBER_DO_KICK_FORBIDDEN = 4420;  //车队成员角色禁止踢人
    FLEET_SELF_KICK_FORBIDDEN = 4421;       // 禁止踢自己出车队
    FLEET_NEW_OWNER_ALREADY_OWNER = 4422;   // 转移车队主：被转移人已经是车队主
    FLEET_CHANGE_NICK_LIST_EMPTY = 4423;    //修改昵称列表为空
    FLEET_CHANGE_NICK_HASERROR = 4424;      //修改成员昵称出错
    FLEET_NO_VALID_MEMBER_TO_BE_KICKED = 4425; //没有可踢的成员
    FLEET_CREATE_MEMBER_REPEATED = 4426;    //创建车队时有重复用户
    FLEET_BEKICKED_NO_IN_FLEET = 4427;      // 被踢者不在车队中
    FLEET_ADDMAMBER_HASERROR = 4428;       //添加车队成员包含错误
    FLEET_DELMAMBER_HASERROR = 4429;       //删除车队成员包含错误
    FLEET_INVITATION_OVERDUE = 4430;       // 车队邀请已超时
    FLEET_DESC_EXCEED_LIMIT = 4431;         // 车队描述超过长度限制
    FLEET_SOME_USER_NOT_REGISTERD = 4432;   // 部分用户未注册
    FLEET_MUST_SET_ASSEMBLY_POINT = 4433;   // 必须设置集结点
}
